// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="container"
  >
    <div
      className="profile__edit-titlezone"
    >
      <h1
        className="profile__edit-title"
      />
    </div>
    <div
      className="profile__edit-page-position"
    >
      <div
        className="profile__edit-top-position"
      >
        <div
          className="profile__edit-image-zone"
        >
          <div
            className="profile__edit-image-upload"
          >
            <ProfileUploadImage
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
              activateSaveButton={[Function]}
<<<<<<< HEAD
              onFile={[Function]}
              personalImage={null}
              tempPersonalImage={null}
              thumbnailImage="/img/general/user-placeholder-thumbnail.svg"
              thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
            >
              <div
                className="profile-picture"
              >
                <div
                  className="image-upload"
                >
                  <div
                    className="image-upload-loader"
                  >
                    <UploadButton
                      baseImage="/img/general/user-placeholder-thumbnail.svg"
                      readFiles={[Function]}
                      thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
                    >
                      <label>
                        <HoverImage
                          mouseOver="/img/general/user-placeholder-thumbnail-hover.svg"
                          src="/img/general/user-placeholder-thumbnail.svg"
                        >
                          <img
                            className="image-upload-image"
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            src="/img/general/user-placeholder-thumbnail.svg"
                          />
                        </HoverImage>
                        <input
                          accept="image/png, image/jpeg"
                          className="droppable-image-field--file-input"
                          onChange={[Function]}
                          type="file"
                        />
                      </label>
                    </UploadButton>
=======
              buttonText="Upload profilbillede"
=======
>>>>>>> updated tests, added T component, post rebase
=======
              activateSaveButton={[Function]}
>>>>>>> added enabled/disabled button, toast call on updated user, fine tuning of css, updated snapshot, added T tags
              h="90px"
=======
>>>>>>> cleaned up styles and other minor code clumps
              onFile={[Function]}
              personalImage={null}
              tempPersonalImage={null}
              thumbnailImage="/img/general/user-placeholder-thumbnail.svg"
              thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
            >
              <div
                className="profile-picture"
              >
                <div
                  className="image-upload"
                >
                  <div
                    className="image-upload-loader"
                  >
                    <UploadButton
                      baseImage="/img/general/user-placeholder-thumbnail.svg"
                      readFiles={[Function]}
                      thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
                    >
                      <label>
                        <HoverImage
                          mouseOver="/img/general/user-placeholder-thumbnail-hover.svg"
                          src="/img/general/user-placeholder-thumbnail.svg"
                        >
                          <img
                            className="image-upload-image"
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            src="/img/general/user-placeholder-thumbnail.svg"
                          />
<<<<<<< HEAD
                        </label>
                      </UploadButton>
                    </div>
>>>>>>> added design for mobile
=======
                        </HoverImage>
                        <input
                          accept="image/png, image/jpeg"
                          className="droppable-image-field--file-input"
                          onChange={[Function]}
                          type="file"
                        />
                      </label>
                    </UploadButton>
>>>>>>> cleaned up styles and other minor code clumps
                  </div>
                  <div
                    style={
                      Object {
                        "clear": "both",
                      }
                    }
                  />
                  <div
                    className="profile__image-errors"
                  >
                    <Error />
                  </div>
                </div>
              </div>
            </ProfileUploadImage>
          </div>
          <div
            className="profile__edit-image-text"
          >
            Vælg billede
          </div>
        </div>
        <div
          className="profile__edit-textfield-zone"
        >
          <EditProfileForm
<<<<<<< HEAD
<<<<<<< HEAD
            activateSaveButton={[Function]}
            confirmDelete={[Function]}
            enableButton={true}
=======
            confirmDelete={[Function]}
>>>>>>> added design for mobile
=======
            activateSaveButton={[Function]}
            confirmDelete={[Function]}
            enableButton={true}
>>>>>>> added enabled/disabled button, toast call on updated user, fine tuning of css, updated snapshot, added T tags
            updateImageId={[Function]}
          >
            <form
              onSubmit={[Function]}
              style={
                Object {
                  "maxWidth": "400px",
                }
              }
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <div
                  className="profile__edit-username-zone"
                >
                  <div
                    className="profile__edit-inputNameTitle"
                  >
                    Brugernavn
                  </div>
                  <div
                    className="profile__edit-textfield"
                  >
                    <input
                      className="profile__mobileinputfield   has-feedback"
                      data-cy="user-form-name"
                      name="name"
                      onChange={[Function]}
                      placeholder="Skriv brugernavn"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="profile__edit-libraryinfo"
              >
                <p
                  className="mb6"
                >
                  <T
                    component="login"
                    name="signedInby"
                  >
                    Du er logget på via
                  </T>
                  <input
                    className="profile__edit-libraryname"
                    disabled={true}
                    name="name"
                    type="text"
                    value=""
                  />
                </p>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="/om"
                >
                  Se regler og vilkår for Min næste bog
                </a>
              </div>
              <div
                className="profile__edit-link"
              >
                <Link
                  href="#!"
                  onClick={[Function]}
                >
                  <T
                    component="profile"
                    name="deleteProfile"
                  >
                    Slet profil
                  </T>
                </Link>
              </div>
              <div
                className="profile__edit-bottom-position"
              >
                <div
                  className="profile__edit-bottom-elements"
                >
                  <div
<<<<<<< HEAD
<<<<<<< HEAD
                    className="btn profile__edit-savebtn"
                  >
                    <button
                      data-cy="user-form-submit"
                      disabled={false}
                    >
<<<<<<< HEAD
=======
                    style={
                      Object {
                        "marginTop": "8px",
                      }
                    }
=======
                    className="btn profile__edit-savebtn"
>>>>>>> added enabled/disabled button, toast call on updated user, fine tuning of css, updated snapshot, added T tags
                  >
                    <button
                      data-cy="user-form-submit"
                      disabled={false}
                    >
>>>>>>> added design for mobile
=======
>>>>>>> lint issues, updated snapshot
                      Gem Ændringer
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </EditProfileForm>
        </div>
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="container"
>
  <div
    className="profile__edit-titlezone"
  >
    <h1
      className="profile__edit-title"
    />
  </div>
  <div
    className="profile__edit-page-position"
  >
    <div
      className="profile__edit-top-position"
    >
      <div
        className="profile__edit-image-zone"
      >
        <div
          className="profile__edit-image-upload"
        >
          <div
            className="profile-picture"
<<<<<<< HEAD
<<<<<<< HEAD
          >
            <div
              className="image-upload"
            >
              <div
                className="image-upload-loader"
              >
                <label>
                  <img
                    className="image-upload-image"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    src="/img/general/user-placeholder-thumbnail.svg"
                  />
                  <input
                    accept="image/png, image/jpeg"
                    className="droppable-image-field--file-input"
                    name={undefined}
                    onChange={[Function]}
                    type="file"
                  />
                </label>
=======
            style={
              Object {
                "paddingTop": "12px",
                "width": "57px",
              }
            }
=======
>>>>>>> cleaned up styles and other minor code clumps
          >
            <div
              className="image-upload"
            >
              <div
                className="image-upload-loader"
              >
<<<<<<< HEAD
                <div>
                  <label>
                    <div>
                      <img
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/img/general/user-placeholder-thumbnail.svg"
                        style={
                          Object {
                            "cursor": "pointer",
                            "height": "90px",
                            "width": "90px",
                          }
                        }
                      />
                    </div>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      name={undefined}
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </div>
<<<<<<< HEAD
>>>>>>> added design for mobile
=======
>>>>>>> lint issues, updated snapshot
=======
                <label>
                  <img
                    className="image-upload-image"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    src="/img/general/user-placeholder-thumbnail.svg"
                  />
                  <input
                    accept="image/png, image/jpeg"
                    className="droppable-image-field--file-input"
                    name={undefined}
                    onChange={[Function]}
                    type="file"
                  />
                </label>
>>>>>>> cleaned up styles and other minor code clumps
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                className="profile__image-errors"
              />
            </div>
          </div>
        </div>
        <div
          className="profile__edit-image-text"
        >
          Vælg billede
        </div>
      </div>
      <div
        className="profile__edit-textfield-zone"
      >
        <form
          onSubmit={[Function]}
          style={
            Object {
              "maxWidth": "400px",
            }
          }
        >
          <div
            className="input-group mb2   has-feedback"
          >
            <div
              className="profile__edit-username-zone"
            >
              <div
                className="profile__edit-inputNameTitle"
              >
                Brugernavn
              </div>
              <div
                className="profile__edit-textfield"
              >
                <input
                  className="profile__mobileinputfield   has-feedback"
                  data-cy="user-form-name"
                  name="name"
                  onChange={[Function]}
                  placeholder="Skriv brugernavn"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="profile__edit-libraryinfo"
          >
            <p
              className="mb6"
            >
              Du er logget på via
              <input
                className="profile__edit-libraryname"
                disabled={true}
                name="name"
                type="text"
                value=""
              />
            </p>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="/om"
            >
              Se regler og vilkår for Min næste bog
            </a>
          </div>
          <div
            className="profile__edit-link"
          >
            <Link
              href="#!"
              onClick={[Function]}
            >
              Slet profil
            </Link>
          </div>
          <div
            className="profile__edit-bottom-position"
          >
            <div
              className="profile__edit-bottom-elements"
            >
              <div
<<<<<<< HEAD
<<<<<<< HEAD
                className="btn profile__edit-savebtn"
              >
                <button
                  data-cy="user-form-submit"
                  disabled={true}
=======
                style={
                  Object {
                    "marginTop": "8px",
                  }
                }
=======
                className="btn profile__edit-savebtn"
>>>>>>> added enabled/disabled button, toast call on updated user, fine tuning of css, updated snapshot, added T tags
              >
                <button
                  data-cy="user-form-submit"
<<<<<<< HEAD
                  disabled={undefined}
>>>>>>> added design for mobile
=======
                  disabled={true}
>>>>>>> added enabled/disabled button, toast call on updated user, fine tuning of css, updated snapshot, added T tags
                >
                  Gem Ændringer
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
